--- a/kocalc.html
+++ b/kocalc.html
@@ -27,15 +27,15 @@
     <title>Smash Ultimate Calculator</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.5" />
-    <meta name="description" content="Web based Smash Ultimate knockback calculator" />
+    <meta name="description" content="Smash Ultimate knockback calculator" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@Ruben_dal" />
     <meta name="twitter:title" content="Smash Ultimate Calculator" />
-    <meta name="twitter:description" content="Web based Smash Ultimate knockback calculator" />
+    <meta name="twitter:description" content="Smash Ultimate knockback calculator" />
     <meta name="twitter:image:src" content="https://raw.githubusercontent.com/rubendal/SSBU-Calculator/gh-pages/img/icon.png" />
     <meta property="og:title" content="Smash Ultimate Calculator" />
     <meta property="og:image" content="https://raw.githubusercontent.com/rubendal/SSBU-Calculator/gh-pages/img/icon.png" />
-    <meta property="og:description" content="Web based Smash Ultimate knockback calculator" />
+    <meta property="og:description" content="Smash Ultimate knockback calculator" />
 </head>
 <body ng-app="calculator" ng-controller="calculator">
 
