Link added to readme
To avoid possible questions since most stuff is based on approximations

--- a/percentcalc.html
+++ b/percentcalc.html
@@ -72,6 +72,9 @@
                         <option ng-selected="$first" ng:repeat="t in themes" ng-attr-value="{{t.name}}">{{t.name}}</option>
                     </select>
                 </span>
+                <span style="clear: right;float: right;margin-right: 20px;margin-top: 15px;line-height:0px;font-size:14px;">
+                    <a class="hide-link" target="_blank" href="https://github.com/rubendal/SSBU-Calculator#readme">Read this before using app</a>
+                </span>
             </div>
 
         </div>
