Added link to Smash 4 Calculator

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div id="header-cont">
             <img id="header-icon" class="header-image invert" src="./img/icon.png" />
             <div id="header-text">
-                <a class="hide-link" href="https://github.com/rubendal/SSBU-Calculator" target="_blank" title="Github repository"><h3>Smash Ultimate Calculator</h3></a>
+                <a class="hide-link" href="https://github.com/rubendal/SSBU-Calculator" target="_blank"><h3>Smash Ultimate Calculator</h3></a>
                 <br />
                 <span class="description"></span>
                 <br />
@@ -57,6 +57,9 @@
             <div id="header-right">
                 <span id="links">
                     <span>
+                        <a href="https://rubendal.github.io/Sm4sh-Calculator/" target="_blank" class="hide-link" title="Smash 4 Calculator">
+                            <img class="header-link-icon" src="./img/smash4-icon.png" />
+                        </a>
                         <a href="https://twitter.com/Ruben_dal" target="_blank" class="hide-link" title="Twitter @Ruben_dal">
                             <img class="header-link-icon" src="./img/t-icon.png" />
                         </a>
@@ -74,7 +77,7 @@
                         <option ng-selected="$first" ng:repeat="t in themes" ng-attr-value="{{t.name}}">{{t.name}}</option>
                     </select>
                 </span>
-                <span style="clear: right;float: right;margin-right: 20px;margin-top: 15px;line-height:0px;font-size:14px;">
+                <span style="clear: right;float: right;margin-right: 20px;margin-top: 13px;line-height:0px;font-size:14px;">
                     <a class="hide-link" target="_blank" href="https://github.com/rubendal/SSBU-Calculator#readme">Read this before using app</a>
                 </span>
             </div>
