Remove launch speed limits

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                             <option ng-selected="$first" ng:repeat="move in moveset" ng-attr-value="{{move.id}}">{{move.name}}</option>
                         </select>
                         <br />
-                        <a class="select-link" href="http://kuroganehammer.com/SSBU/{{encodedAttackerValue}}" target="_blank">{{attackerName}} frame data</a>
+                        <a class="select-link" href="http://kuroganehammer.com/Smash4/{{encodedAttackerValue}}" target="_blank">{{attackerName}} frame data</a>
                         <br />
                         <div ng-style="counterStyle">
                             Countered Damage
