Enabled training results and added new characters

--- a/index.html
+++ b/index.html
@@ -590,14 +590,14 @@
                     <table class="result-table">
                         <tr>
                             <td class="attribute"></td>
-                            <!--<td class="value">Training mode</td>
-                    <td class="value"></td>-->
+                            <td class="value">Training mode</td>
+                            <td class="value"></td>
                             <td class="value">Vs mode</td>
                         </tr>
                         <tr ng-repeat="x in results.list" ng-class-even="'value-even'">
                             <td class="attribute" title="{{x.title}}">{{ x.name }}</td>
-                            <!--<td class="value" title="{{x.title}}" ng-style="{{x.style}}">{{ x.val1 }}</td>
-                    <td class="value" title="{{x.title}}" ng-style="{{x.style}}">{{ x.valc }}</td>-->
+                            <td class="value" title="{{x.title}}" ng-style="{{x.style}}">{{ x.val1 }}</td>
+                    <td class="value" title="{{x.title}}" ng-style="{{x.style}}">{{ x.valc }}</td>
                             <td class="value" title="{{x.title}}" ng-style="{{x.style}}">{{ x.val2}}</td>
                         </tr>
                     </table>
@@ -665,11 +665,11 @@
                             </select>
                             <br />
                         </span>
-                        <!--
+                        
             <input type="radio" name="mode" ng-model="game_mode" ng-attr-value="training" ng-change="update()" /> Training mode
             <br />
             <input type="radio" name="mode" ng-model="game_mode" ng-attr-value="vs" ng-change="update()" /> Vs mode
-            <br />-->
+            <br />
                     </div>
                 </div>
 
