Adjustments to launch speed and decay
Based on Smash Ultimate distance launch display on training mode from the direct

--- a/index.html
+++ b/index.html
@@ -525,6 +525,8 @@
                     <br />
                     Multiplier <input name="param_launch_speed" type="number" min="0" max="999" step="0.001" ng-model="params.launch_speed" ng-change="updateParameters()" />
                     <br />
+                    Decay <input name="param_decay" type="number" min="0" max="999" step="0.01" ng-model="params.decay" ng-change="updateParameters()" />
+                    <br />
                     <br />
                     Gravity launch speed influence
                     <br />
