--- a/index.html
+++ b/index.html
@@ -524,10 +524,8 @@
                     Launch speed
                     <br />
                     Multiplier <input name="param_launch_speed" type="number" min="0" max="999" step="0.001" ng-model="params.launch_speed" ng-change="updateParameters()" />
-                    <!--<br />
-                    Decay <input name="param_decay" type="number" min="0" max="999" step="0.01" ng-model="params.decay" ng-change="updateParameters()" />
                     <br />
-                    Vertical Decay <input name="param_vertical_decay" type="number" min="0" max="999" step="0.01" ng-model="params.vertical_decay" ng-change="updateParameters()" />-->
+                    Decay <input name="param_decay" type="number" min="0" max="999" step="0.01" ng-model="params.decay" ng-change="updateParameters()" />
                     <br />
                     <br />
                     Gravity launch speed influence
@@ -648,8 +646,9 @@
                         </div>
                         <br />
                         Display <input name="extra_frames" type="number" min="0" max="50" step="1" ng-model="extra_vis_frames" ng-change="update()" style="width:3em;" /> additional actionable frames
-                        <br />
-                        <input type="checkbox" ng-model="compareSmash4" ng-change="update()" /> Compare with Smash 4 launch speed data
+                        <!--<br />
+                        Hidden until decay is figured out
+                        <input type="checkbox" ng-model="compareSmash4" ng-change="update()" /> Compare with Smash 4 launch speed data-->
                         <br />
                         <br />
                         <!--
