Added decay testing stuff to parameters editing

--- a/index.html
+++ b/index.html
@@ -525,7 +525,11 @@
                     <br />
                     Multiplier <input name="param_launch_speed" type="number" min="0" max="999" step="0.001" ng-model="params.launch_speed" ng-change="updateParameters()" />
                     <br />
-                    Decay <input name="param_decay" type="number" min="0" max="999" step="0.01" ng-model="params.decay" ng-change="updateParameters()" />
+                    Decay <input name="param_decay" type="number" min="0" max="999" step="0.01" ng-model="params.test.decay" ng-change="updateParameters()" />
+                    <br />
+                    Decay reduction <input name="param_decay_reduction" type="number" min="0" max="999" step="0.01" ng-model="params.test.decay_reduction" ng-change="updateParameters()" />
+                    <br />
+                    Min Decay <input name="param_min_decay" type="number" min="0" max="999" step="0.01" ng-model="params.test.min_decay" ng-change="updateParameters()" />
                     <br />
                     <br />
                     Gravity launch speed influence
