Input/Select adjustment

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                         </a>
                     </span>
                 </span>
-                <span id="theme">
-                    Theme
-                    <select id="themeSelect" name="theme" class="header-select" ng-model="theme" ng-change="changeTheme()">
-                        <option ng-selected="$first" ng:repeat="t in themes" ng-attr-value="{{t.name}}">{{t.name}}</option>
-                    </select>
-                </span>
-                <span style="clear: right;float: right;margin-right: 20px;margin-top: 13px;line-height:0px;font-size:14px;">
+                <!--<span id="theme">
+        Theme
+        <select id="themeSelect" name="theme" class="header-select" ng-model="theme" ng-change="changeTheme()">
+            <option ng-selected="$first" ng:repeat="t in themes" ng-attr-value="{{t.name}}">{{t.name}}</option>
+        </select>
+    </span>-->
+                <span style="clear: right;float: right;margin-right: 20px;margin-top: 57px;line-height:0px;font-size:14px;">
                     <a class="hide-link" target="_blank" href="https://github.com/rubendal/SSBU-Calculator#readme">Read this before using app</a>
                 </span>
             </div>
